Fix z-index for blog navbar

--- a/frontend/styles/blog.scss
+++ b/frontend/styles/blog.scss
@@ -5,6 +5,7 @@
 .navbar-blog {
   background-color: $blue;
   backdrop-filter: blur(10px);
+  z-index: 1;
 }
 
 @include media-breakpoint-down(sm) {
